@@ -1,0 +1,8 @@
+
+#     val f : x:int -> int = <fun>
+# Characters 5-6:
+  f ?x:0;;
+       ^
+Error: The function applied to this argument has type x:int -> int
+This argument cannot be applied with label ?x
+# 
