@@ -40,6 +40,8 @@ Bug fixes:
 - PR#5821: Wrong record field is reported as duplicate
 - PR#5824: Generate more efficient code for immediate right shifts.
 - PR#5825: Add a toplevel primitive to use source file wrapped with the coresponding module
+- PR#5835: nonoptional labeled arguments can be passed with '?'
+- PR#5865: assert failure when reporting undefined field label
 
 Internals:
 - Moved debugger/envaux.ml to typing/envaux.ml to publish env_of_only_summary
@@ -72,7 +74,6 @@ Bug fixes:
 - PR#5806: ensure that backtrace tests are always run (testsuite)
 - PR#5810: error in switch printing when using -dclambda
 - PR#5858: Assert failure during typing of class
-- PR#5865: assert failure when reporting undefined field label
 
 OCaml 4.00.1:
 -------------
